app/assets/stylesheets/dashboard.scss
@import "font-awesome-sprockets";
@import "font-awesome";

@import "bourbon";
@import "neat";

@import "dashboard/third-party/angular-spinkit.min";

* {
  font-family: "Helvetica Neue", "Helvetica", "Arial";
  @include box-sizing(border-box);
}

h1,h2,h3,h4,h5,h6,p,a {
  margin-top: 10px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  font-weight: 300;
}
p,div {
  font-size: 10pt;
}

a {
  color: blue;
  &:hover { cursor: pointer; }
  &:visited { color: blue; }
}

body {
  margin: 0 auto;
  padding: 0px;
  background-color: #F8F8F8;
}

fieldset {
  margin: 0px;
  padding: 0px;
  text-align: left;
  border: none;
}

#header-container {
  padding: 14px 10px;
  border-bottom: 1px solid #C7C7C7;
  background: white;

}

$faded-text: #959595;
$brand-green: #228B8F;

#header {
  @include outer-container;
  text-align: center;
  .brand {
    text-align: left;
    @include span-columns(3);
    .logo {
      height: 30px;
      margin-bottom: 5px;
    }
    .tagline {
      font-weight: 300;
      color: $faded-text;
      font-size: 10pt;
    }
    &:hover {
      cursor: pointer;
    }
  }

  .delivery-box {
    @include span-columns(6);
    margin-top: 6px;
    text-align: center;
    font-size: 17pt;

  }

  .account {
    @include span-columns(3);
    margin-top: 8px;
    a {
      text-decoration: none;
      border-bottom: 1px dotted blue;
      font-size: 14pt;
    }
  }
}

#place-input {
  margin: 0 auto;
  text-align: left;
  width: 300px;
  height: 50px;
  font-size: 31px;
  color: #9797A3;
  line-height: 20px;
  /* type in your locatio: */
  text-shadow: 0px 0px 0px #FFFFFF;
  font-family: "HelveticaNeue-Light";
  padding-top: 10px;

  @include linear-gradient(-179deg, #FFFFFF, 0%, #F1F1F1, 100%);

  border: 1px solid #FFFFFF;
  box-shadow:         inset 0px 2px 1px 0px #FFFFFF;

  background-image: image-url("placesearch.png");
  display: inline-block;
  @include retina-image(placesearch, 300px 50px);

}

#place {
  display: inline-block;
  color: $brand-green;
  border-bottom: 1px $brand-green dotted;
  font-size: 17pt;
  @include user-select(none);
  &:hover {
    cursor: pointer;
  }
}

#place-select {
  text-align: left;
  margin: 0 auto;
  margin-top: -20px;
  background-color: #F9F9F9;
  // border-radius: 2px;
  border: 1px solid #FFFFFF;
  // -moz-box-shadow:    inset 0px 2px 1px 0px #FFFFFF;
  // box-shadow:         inset 0px 2px 1px 0px #FFFFFF;
  padding: 20px;
  padding: 30px 20px;
  width: 300px;
  list-style: none;
  .place {
    margin-bottom: 20px;
    @include user-select(none);
    .name {
      font-family: "HelveticaNeue-Light";
      font-size: 24px;
      color: #6F6F79;
      line-height: 20px;
      text-shadow: 0px 0px 0px #FFFFFF;

      &:hover {
        color: #39393A;
        cursor: pointer;
      }
    }

  }
}

#place-select-container {
  margin: 0 auto;
  padding: 20px 10px;
  position: absolute;
  background-color: rgba(0,0,0,0.75);
  height: 100%;
  width: 100%;
  top: 80px;
  left: 0px;
  z-index: 100;
  text-align: center;
  span, li { font-size: 17pt; }
  li { 
    /* Line: */
    border-bottom: 1px solid #979797;
    -moz-box-shadow:    0px 0px 0px 0px rgba(255,255,255,0.50);
    box-shadow:         0px 0px 0px 0px rgba(255,255,255,0.50); 
    padding-bottom: 15px;
  }
  .label {
    color: white;
    width: 144px;
  }
}


#content-container {
  margin-top: 14px;
  width: 100%;
}

.nommit-logo {
  background-size: contain;
  background-repeat: no-repeat;
  background-image: image-url("nommit-logo.png");
  display: block;
  &.alt {
    background-image: image-url("nommit-logo-alt.png");
  }
}

.modal-cover {
  margin: 0 0;
  text-align: center;
  background-color: rgba(25,25,25,0.75);
  display: block;
  height: 100%;
  width: 100%;
  position: fixed;
  overflow: hidden;
  top: 0px;
  left: 0px;
  z-index: 100;
  display: table;
}

.modal-container {
  display: table-cell;
  vertical-align: middle;
  overflow: hidden;
}

.modal {
  margin: 0 auto;
  text-align: center;
  box-shadow: 0px 1px 4px 0px rgba(232,232,232,0.19);
  max-width: 300px;
  max-height: 400px;
  .header {
    margin: 0 0;
    padding: 5px 20px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #D3D3D4;
    @include linear-gradient(-179deg, white, #F1F1F1);
    border: 1px solid white;
    box-shadow: inset 0px 2px 1px 0px white;
    color: #6F6F79;
    .title {
      margin-left: -11px;
      font-size: 13px;
      font-weight: bold;
      line-height: 20px;
      text-shadow: 0px 1px 0px #FFFFFF;
    }
    .close {
      margin-top: 1px;
      float: left;
      margin-left: -10px;
      background-image: url("close-button.png");
      height: 20px;
      width: 20px;
      @include retina-image(close-button, 20px 20px)
    }
  }
  .content {
    margin-top: -1px;
    padding-left: 20px;
    padding-right: 20px;
    background: white;
    border: 1px solid #E9E9E9;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;

    label, p, span, h3 ,h5 {
      font-size: 13px;
      color: #6F6F79;
      line-height: 20px;
      text-shadow: 0px 1px 0px #FFFFFF;
    }

    input {
      display: block;
      margin-top: 5px;
      padding: 8px;
      width: 100%;
      border: none;
      background: #FFFFFF;
      font-size: 15px;
      color: #6F6F79;
      line-height: 18px;
      outline: none;
      border-radius: 2px;
      box-shadow: 0px 1px 0px 0px rgba(255,255,255,0.64), inset 0px 1px 2px 0px rgba(0,0,0,0.27);
    }

    button {
      display: block;
      padding: 6px 0px;
      border-radius: 4px;
      width: 100%;
      border: 1px solid #42B7BB;
      color: white;
      
      @include linear-gradient(-179deg, #60C4BE, 0%, #33A2A6, 98%);
      /* Sketch doesnt export gradient borders at this point */
      box-shadow:         0px 1px 0px 0px rgba(24,24,24,0.11);

      font-family: Helvetica;
      font-size: 17px;
      color: #FFFFFF;
      line-height: 20px;
      letter-spacing: 0px;
      /* Confirm: */
      text-shadow: 0px -1px 0px #3088C7;

      &:hover {
        @include linear-gradient(-179deg, darken(#60C4BE, 10%), 0%, darken(#33A2A6, 10%), 98%);
        cursor: pointer;
      }
    }

    fieldset {
      margin-top: 10px;
    }

    .overlay {
      margin-top: 10px;
      margin-bottom: 10px;
      text-align: left;
      .avatar {
        display: inline-block;
        padding: 2px;
        background-color: white;
        width: 64px;
        height: 64px;
        border-radius: 32px;
        background-size: contain;
        background-color: white;
        background-position: 50%;
        box-shadow: inset 0px 2px 3px 0px rgba(0,0,0,0.50);
      }
      .person {
        margin-left: 5px;
        position: relative;
        bottom: 15px;
        display: inline-block;
        .name {
          font-size: 16px;
        }
        .email {
          margin-top: 0px;
        }
      }
      .error {
        font-size: 10px;
        color: #D82D2D;
        line-height: 20px;
        /* Phone number is inva: */
        text-shadow: 0px 0px 0px #FFFFFF;
        display: inline-block;
      }
    }
    .body {

      .payment {
        .expiration {
          margin-right: 2px;
        }
        .expiration, .cvc {
          display: inline-block;
          max-width: 126px;
          width: 100%;
        }
        .fa {
          color: #4A5861;
        }
      }


      button {
        margin-top: 25px;
        margin-bottom: 10px;
      }
      .secured {
        text-align: center;
        .muted {
          margin: 0 auto;
          text-align: center;
          padding: 0px;
          color: #6F6F79;
          font-size: 10px;
          font-family: "HelveticaNeue-LightItalic";
          font-style: italic;
          display: block;
          line-height: 20px;
          text-shadow: 0px 0px 0px #FFFFFF;
        }
      }

    }
  }
}

/* enable absolute positioning */
.inner-addon { 
  position: relative; 
  .fa {
    position: absolute;
    padding: 10px;
    pointer-events: none;
  }
  .fa-calendar-o, .fa-lock {
    margin-top: 5px;
  } 
  input {
    text-indent: 30px;
  }
  .fa-mobile-phone {
    font-size: 20px;
    margin-top: -3px;
  }
}

/* align icon */
.left-addon .fa { left:  0px;}
.right-addon .fa { right: 0px;}

/* add padding  */
.left-addon input  { padding-left:  30px; }
.right-addon input { padding-right: 30px; }

@import "dashboard/foods";
@import "dashboard/login";

